test: Add lots of test cases for numbers and number arrays

--- a/src/ABI/Encode/AbiEncoder.Numbers.tt
+++ b/src/ABI/Encode/AbiEncoder.Numbers.tt
@@ -13,18 +13,12 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>(int value)
-    { 
-        AddElement(new FixedType<string>.Int(value, <#=i#>));
-        return this;
-    }    
+        => AddElement(new FixedType<string>.Int(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.Int<#=i#>(int value)
         => Int<#=i#>(value);
 
     public AbiEncoder UInt<#=i#>(uint value)
-    { 
-        AddElement(new FixedType<string>.UInt(value, <#=i#>));
-        return this;
-    }
+        => AddElement(new FixedType<string>.UInt(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>(uint value)
         => UInt<#=i#>(value);
 
@@ -36,18 +30,12 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>(long value)
-    { 
-        AddElement(new FixedType<string>.Long(value, <#=i#>));
-        return this;
-    }
+        => AddElement(new FixedType<string>.Long(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.Int<#=i#>(long value)
         => Int<#=i#>(value);
 
     public AbiEncoder UInt<#=i#>(ulong value)
-    { 
-        AddElement(new FixedType<string>.ULong(value, <#=i#>));
-        return this;
-    }
+        => AddElement(new FixedType<string>.ULong(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>(ulong value)
         => UInt<#=i#>(value);
 
@@ -59,18 +47,12 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>(BigInteger value)
-    { 
-        AddElement(new FixedType<string>.BigInteger(value, false, <#=i#>));
-        return this;
-    }
+        => AddElement(new FixedType<string>.BigInteger(value, false, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.Int<#=i#>(BigInteger value)
         => Int<#=i#>(value);
 
     public AbiEncoder UInt<#=i#>(BigInteger value)
-    { 
-        AddElement(new FixedType<string>.BigInteger(value, true, <#=i#>));
-        return this;
-    }
+        => AddElement(new FixedType<string>.BigInteger(value, true, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>(BigInteger value)
         => UInt<#=i#>(value);
 <#
