--- a/src/ABI/Decode/AbiDecoder.Numbers.tt
+++ b/src/ABI/Decode/AbiDecoder.Numbers.tt
@@ -12,12 +12,12 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>(out short value)
     {
-        value = FixedType<object>.Short.Decode(Bytes);
+        value = FixedType<object>.Short.Decode(EncodedBytes);
         return ConsumeBytes(0);
     }
     public AbiDecoder UInt<#=i#>(out ushort value)
     {
-        value = FixedType<object>.UShort.Decode(Bytes);
+        value = FixedType<object>.UShort.Decode(EncodedBytes);
         return ConsumeBytes(0);
     }
 <#
@@ -29,12 +29,12 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>(out long value)
     {
-        value = FixedType<object>.Long.Decode(Bytes);
+        value = FixedType<object>.Long.Decode(EncodedBytes);
         return ConsumeBytes(0);
     }
     public AbiDecoder UInt<#=i#>(out ulong value)
     {
-        value = FixedType<object>.ULong.Decode(Bytes);
+        value = FixedType<object>.ULong.Decode(EncodedBytes);
         return ConsumeBytes(0);
     }
 <#
@@ -46,12 +46,12 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>(out BigInteger value)
     {
-        value = FixedType<object>.BigInteger.Decode(Bytes, false);
+        value = FixedType<object>.BigInteger.Decode(EncodedBytes, false);
         return ConsumeBytes(0);
     }
     public AbiDecoder UInt<#=i#>(out BigInteger value)
     {
-        value = FixedType<object>.BigInteger.Decode(Bytes, true);
+        value = FixedType<object>.BigInteger.Decode(EncodedBytes, true);
         return ConsumeBytes(0);
     }
 <#
