refactor: use object as ignored type

--- a/src/EtherSharp/ABI/Encode/AbiEncoder.Numbers.tt
+++ b/src/EtherSharp/ABI/Encode/AbiEncoder.Numbers.tt
@@ -13,12 +13,12 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>(int value)
-        => AddElement(new FixedType<string>.Int(value, <#=i#>));
+        => AddElement(new FixedType<object>.Int(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.Int<#=i#>(int value)
         => Int<#=i#>(value);
 
     public AbiEncoder UInt<#=i#>(uint value)
-        => AddElement(new FixedType<string>.UInt(value, <#=i#>));
+        => AddElement(new FixedType<object>.UInt(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>(uint value)
         => UInt<#=i#>(value);
 
@@ -30,12 +30,12 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>(long value)
-        => AddElement(new FixedType<string>.Long(value, <#=i#>));
+        => AddElement(new FixedType<object>.Long(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.Int<#=i#>(long value)
         => Int<#=i#>(value);
 
     public AbiEncoder UInt<#=i#>(ulong value)
-        => AddElement(new FixedType<string>.ULong(value, <#=i#>));
+        => AddElement(new FixedType<object>.ULong(value, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>(ulong value)
         => UInt<#=i#>(value);
 
@@ -47,12 +47,12 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>(BigInteger value)
-        => AddElement(new FixedType<string>.BigInteger(value, false, <#=i#>));
+        => AddElement(new FixedType<object>.BigInteger(value, false, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.Int<#=i#>(BigInteger value)
         => Int<#=i#>(value);
 
     public AbiEncoder UInt<#=i#>(BigInteger value)
-        => AddElement(new FixedType<string>.BigInteger(value, true, <#=i#>));
+        => AddElement(new FixedType<object>.BigInteger(value, true, <#=i#>));
     IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>(BigInteger value)
         => UInt<#=i#>(value);
 <#
