feat: Address encoding and refactor some decoder fucntions

--- a/src/EtherSharp/ABI/Decode/AbiDecoder.Arrays.tt
+++ b/src/EtherSharp/ABI/Decode/AbiDecoder.Arrays.tt
@@ -11,13 +11,13 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>Array(out byte[] bytes)
     {
-        bytes = DynamicType<byte>.PrimitiveNumberArray<byte>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        bytes = DynamicType<byte>.PrimitiveNumberArray<byte>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 
     public AbiDecoder UInt<#=i#>Array(out sbyte[] bytes)
     {
-        bytes = DynamicType<sbyte>.PrimitiveNumberArray<sbyte>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        bytes = DynamicType<sbyte>.PrimitiveNumberArray<sbyte>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 <#
@@ -29,13 +29,13 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>Array(out short[] shorts)
     {
-        shorts = DynamicType<short>.PrimitiveNumberArray<short>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        shorts = DynamicType<short>.PrimitiveNumberArray<short>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 
     public AbiDecoder UInt<#=i#>Array(out ushort[] shorts)
     {
-        shorts = DynamicType<ushort>.PrimitiveNumberArray<ushort>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        shorts = DynamicType<ushort>.PrimitiveNumberArray<ushort>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 <#
@@ -47,13 +47,13 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>Array(out int[] ints)
     {
-        ints = DynamicType<int>.PrimitiveNumberArray<int>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        ints = DynamicType<int>.PrimitiveNumberArray<int>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 
     public AbiDecoder UInt<#=i#>Array(out uint[] ints)
     {
-        ints = DynamicType<uint>.PrimitiveNumberArray<uint>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        ints = DynamicType<uint>.PrimitiveNumberArray<uint>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 <#
@@ -65,13 +65,13 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>Array(out long[] longs)
     {
-        longs = DynamicType<long>.PrimitiveNumberArray<long>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        longs = DynamicType<long>.PrimitiveNumberArray<long>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 
     public AbiDecoder Int<#=i#>Array(out ulong[] longs)
     {
-        longs = DynamicType<ulong>.PrimitiveNumberArray<ulong>.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex);
+        longs = DynamicType<ulong>.PrimitiveNumberArray<ulong>.Decode(_bytes, _bytesRead);
         return ConsumeBytes();
     }
 <#
@@ -83,12 +83,12 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Int<#=i#>Array(out System.Numerics.BigInteger[] bytes)
     {
-        bytes = DynamicType<System.Numerics.BigInteger>.BigIntegerArray.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex, <#=i#>, false);
+        bytes = DynamicType<System.Numerics.BigInteger>.BigIntegerArray.Decode(_bytes, _bytesRead, <#=i#>, false);
         return ConsumeBytes();
     }
     public AbiDecoder UInt<#=i#>Array(out System.Numerics.BigInteger[] bytes)
     {
-        bytes = DynamicType<System.Numerics.BigInteger>.BigIntegerArray.Decode(_bytes[(int) _currentMetadataIndex..], _currentMetadataIndex, <#=i#>, true);
+        bytes = DynamicType<System.Numerics.BigInteger>.BigIntegerArray.Decode(_bytes, _bytesRead, <#=i#>, true);
         return ConsumeBytes();
     }
 <#
