--- a/src/EtherSharp/ABI/Encode/Interfaces/IStructAbiEncoder.NumberArrays.tt
+++ b/src/EtherSharp/ABI/Encode/Interfaces/IStructAbiEncoder.NumberArrays.tt
@@ -3,6 +3,12 @@
 namespace EtherSharp.ABI.Encode.Interfaces;
 public partial interface IStructAbiEncoder 
 {
+    public IStructAbiEncoder Int8Array(params sbyte[] value);
+    public IStructAbiEncoder UInt8Array(params byte[] value);
+
+    public IStructAbiEncoder Int16Array(params short[] value);
+    public IStructAbiEncoder UInt16Array(params ushort[] value);
+
 <#
     for(var i = 24; i <= 32;i=i+8)
     {
