--- a/src/EtherSharp/ABI/Decode/AbiDecoder.NumberArrays.tt
+++ b/src/EtherSharp/ABI/Decode/AbiDecoder.NumberArrays.tt
@@ -4,7 +4,8 @@
 using EtherSharp.ABI.Dynamic;
 using EtherSharp.ABI.Decode.Interfaces;
 using System.Numerics;
-namespace EtherSharp.ABI.Decode;
+
+namespace EtherSharp.ABI;
 public partial class AbiDecoder
 {
 
