--- a/src/EtherSharp/ABI/Encode/AbiEncoder.NumberArrays.tt
+++ b/src/EtherSharp/ABI/Encode/AbiEncoder.NumberArrays.tt
@@ -11,29 +11,29 @@ public partial class AbiEncoder
     public AbiEncoder Int8Array(params sbyte[] value)
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<sbyte>(value, 8));
     IArrayAbiEncoder IArrayAbiEncoder.Int8Array(params sbyte[] value)
-        => Int8Array(value);
-    IStructAbiEncoder IStructAbiEncoder.Int8Array(params sbyte[] value)
+        => Int8Array(value); 
+    IDynamicTupleEncoder IDynamicTupleEncoder.Int8Array(params sbyte[] value)
         => Int8Array(value);
 
     public AbiEncoder UInt8Array(params byte[] value)
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<byte>(value, 8));
     IArrayAbiEncoder IArrayAbiEncoder.UInt8Array(params byte[] value)
         => UInt8Array(value);
-    IStructAbiEncoder IStructAbiEncoder.UInt8Array(params byte[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.UInt8Array(params byte[] value)
         => UInt8Array(value);
 
     public AbiEncoder Int16Array(params short[] value)
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<short>(value, 16));
     IArrayAbiEncoder IArrayAbiEncoder.Int16Array(params short[] value)
         => Int16Array(value);
-    IStructAbiEncoder IStructAbiEncoder.Int16Array(params short[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.Int16Array(params short[] value)
         => Int16Array(value);
 
     public AbiEncoder UInt16Array(params ushort[] value)
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<ushort>(value, 16));
     IArrayAbiEncoder IArrayAbiEncoder.UInt16Array(params ushort[] value)
         => UInt16Array(value);
-    IStructAbiEncoder IStructAbiEncoder.UInt16Array(params ushort[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.UInt16Array(params ushort[] value)
         => UInt16Array(value);
 
 <#
@@ -44,14 +44,14 @@ public partial class AbiEncoder
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<int>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.Int<#=i#>Array(params int[] value)
         => Int<#=i#>Array(value);
-    IStructAbiEncoder IStructAbiEncoder.Int<#=i#>Array(params int[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params int[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params uint[] value)
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<uint>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.UInt<#=i#>Array(params uint[] value)
         => UInt<#=i#>Array(value);
-    IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>Array(params uint[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params uint[] value)
         => UInt<#=i#>Array(value);
 <#
     }
@@ -64,14 +64,14 @@ public partial class AbiEncoder
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<long>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.Int<#=i#>Array(params long[] value)
         => Int<#=i#>Array(value);
-    IStructAbiEncoder IStructAbiEncoder.Int<#=i#>Array(params long[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params long[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params ulong[] value)
         => AddElement(new DynamicType<object>.PrimitiveNumberArray<ulong>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.UInt<#=i#>Array(params ulong[] value)
         => UInt<#=i#>Array(value);
-    IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>Array(params ulong[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params ulong[] value)
         => UInt<#=i#>Array(value);
 <#
     }
@@ -84,14 +84,14 @@ public partial class AbiEncoder
         => AddElement(new DynamicType<object>.BigIntegerArray(value, false, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.Int<#=i#>Array(params BigInteger[] value)
         => Int<#=i#>Array(value);
-    IStructAbiEncoder IStructAbiEncoder.Int<#=i#>Array(params BigInteger[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params BigInteger[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params BigInteger[] value)
         => AddElement(new DynamicType<object>.BigIntegerArray(value, true, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.UInt<#=i#>Array(params BigInteger[] value)
         => UInt<#=i#>Array(value);
-    IStructAbiEncoder IStructAbiEncoder.UInt<#=i#>Array(params BigInteger[] value)
+    IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params BigInteger[] value)
         => UInt<#=i#>Array(value);
 <#
     }
